tests/react_functional/__snapshots__/jsfmt.spec.js.snap
exports[`test test.js 1`] = `
"import React from \"react\";

function F(props: { foo: string }) {}
<F />; // error: missing \`foo\`
<F foo={0} />; // error: number ~> string
<F foo=\"\" />; // ok

// props subtyping is property-wise covariant
function G(props: { foo: string|numner }) {}
<G foo=\"\" />; // ok

var Z = 0;
<Z />; // error, expected React component
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1530
      return fromString(\" | \").join(path.map(print, \"types\"));
                               ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1530:32)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1452:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
